Revision history for Perl extension DBIx::Skinny

0.07
   2010-XX-XX
        - FIXED: schema_info is not exist case. (thanks walf443)
        - FIXED: row class syntax error case. (report by cho45)
        - MOD: no depends Test::Declare.

0.06
   2010-02-07
        - FIXED: _guess_table_name bug.
        - MOD: utf8_on/utf8_off speed up. (thanks tokuhirom)
        - MOD: direct call caller. (thanks yappo)
        - FIXED: dbd exception (thanks tokuhirom/walf443)
        - FIXED: (connecton|do) error handling (thanks walf443)
        - ADD: some documents
        - MOD: specific your query profiler (thanks walf443)
        - FIXED: error processing when Schema.pm doesn't exist (thanks walf443)
        - MOD: it came to be able to define original Row.pm

0.05
   2009-12-21
        - FIXED: quote col (thanks noblejasper/fujiwara).
                  (table etc no not yet.)
        - FIXED: fetchrow_hashref('NAME_lc') for Oracle. (thanks Tomoyuki Misonou)
        - ADD: Oracle support (thanks Tomoyuki Misonou)
        - FIXED: set_dbh method bug. (report thanks walf443)
        - FIXED: Row::set method using deflate data. (thanks nekoya)
        - ADD: install_common_trigger method for DBIx::Skinny::Schema (thanks nekoya)

0.04
   2009-10-01
        - FIXED: avoid warning, in case of binds contains undef by Profiler.pm (thanks nekoya)
        - FIXED: pod typo (thanks nekoya/yusukebe/fujiwara)
        - MOD: Hide from pause by sample code.
        - ADD: PostgreSQL support (thanks oinume and fujiwara)

0.03
   2009-08-17
        - FIXED: get delete rows count. (RT#48359)
        - FIXED: pod typo (thanks TBONE)
        - MOD: supported search with order_by as hashref or string (thanks nekoya)
        - MOD: call set when updated row object (thanks nekoya)
        - MOD: add new method and more.
        - ADD: skinny sample code.
        - ADD: Manual document.

0.02
    2009-07-15
        - FIXED: tests.
        - MOD: connection method.

0.01
    2008-11-24